--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,7 @@ dependencies:
     - jupyter_client
     - nbconvert
     - pandocfilters
-    - py-pandoc
+    #- py-pandoc
     - click
     - psutil
     - pyyaml
